fix css on button and teamcard on ios

--- a/src/components/ModalLogin/styles.scss
+++ b/src/components/ModalLogin/styles.scss
@@ -10,7 +10,7 @@
   background-color: #00000092;
   backdrop-filter: blur(5px);
   font-family: 'Jost-Regular';
-  transform: translateY(-100%);
+  transform: translateY(-200%);
 
   &.modal-login-active {
     transform: translateY(0);
