--- a/src/components/TeamCard/styles.scss
+++ b/src/components/TeamCard/styles.scss
@@ -47,7 +47,7 @@
         rgb(0, 148, 40) 0%,
         rgba(0, 0, 0, 1) 100%
       );
-      border-radius: var(--radius-xl);
+      overflow: hidden;
       z-index: 1;
       opacity: var(--opacity-0);
       transition: 0.2s;
@@ -56,6 +56,7 @@
   }
 
   &-image {
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -66,6 +67,8 @@
 
   &-text {
     position: absolute;
+    overflow: hidden;
+    border-radius: var(--radius-xl);
     z-index: 2;
     top: 0;
     left: 0;
