--- a/src/styles/_reset.css
+++ b/src/styles/_reset.css
@@ -158,11 +158,3 @@ button {
   outline: 0;
 }
 
-button{
-  border-radius: 0;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  width: 0;
-  height: 0;
-}
